sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped = true;
	while ( swapped == true )  
	(
		swapped = false;
		for (i <- 0 to getNombreValeur() - 2 by -1) {
			if ( plusPetit( i , i+1 ) ){
				 echange ( i , i+1 )
				 swapped = true; 
				}
			}
	)
	

}

